--- a/uebung-flexbox/pos.css
+++ b/uebung-flexbox/pos.css
@@ -29,35 +29,47 @@ section {
   min-width: 10px;
   padding: 1rem 0;
   min-height: 300px;
+  background: yellow;
+  display: flex;
+  justify-content: start;
+  align-items: stretch;
+  flex-direction: row;
+  gap: 20px;
+
 }
 
 .col {
   min-width: 20px;
   min-height: 20px;
-  margin: 10px;
-  width: 20%;
 }
 
 .trolley-grey {
   background: #7d7c84;
+  flex-grow: 1;
+  position: right;
 }
 
 .sea-green {
   background: #2d93ad;
+  flex-grow: 1;
 }
 
 .middle-red {
   background: #de8f6e;
+  flex-grow: 1;
 }
 
 .black {
   background: #000;
+  flex-grow: 1;
 }
 
 .orange {
   background: orange;
+  flex-grow: 1;
 }
 
 .olive {
   background: olive;
+  flex-grow: 1;
 }
